# RustChan

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  SETUP.md  audit_report.md  clippy.sh  deny.toml  dev-check.sh  ffmpeg-migration.md
.github/workflows/: audit.yml  ci.yml  release.yml  rust.yml
built-releases/: rustchan-v1.1.0-checksums-sha256.txt
clippy_reports/: summary.txt
deploy/: backup.sh  chan.service  nginx.conf
docs/: RustChan-Tree-annotated.txt  build_all_rustchan.sh  channet_api_reference.docx  rustchan-banner-maker.html  rustchan-showcase.html
src/: banner.rs  cache.rs  config.rs  db.rs  detect.rs  error.rs  favicon.rs  lib.rs  logging.rs  main.rs  models.rs  pending_fs.rs  terminal.rs  test_fixtures.rs  test_support.rs  theme-init.js  theme.rs  theme_builder.rs
src/chan_net/: chan_net.rs  command.rs  export.rs  import.rs  ledger.rs  mod.rs  poll.rs  refresh.rs  selective_snapshot.rs  snapshot.rs  status.rs
src/config/: template.rs
src/db/: admin.rs  banners.rs  board.rs  boards.rs  chan_net.rs  fs_ops.rs  migrations.rs  mod.rs  pool.rs  posts.rs  schema.rs  themes.rs  threads.rs  types.rs  user_thread_prefs.rs
src/handlers/: admin.rs  backup.rs  banner.rs  board.rs  boards.rs  favicon.rs  mod.rs  posting.rs  render.rs  thread.rs  threads.rs
src/handlers/admin/: auth.rs  backup.rs  content.rs  mod.rs  moderation.rs  settings.rs
src/handlers/admin/backup/: archive.rs  common.rs  create.rs  downloads.rs  http.rs  listing.rs  restore_board.rs  restore_full.rs  types.rs  v4.rs
src/handlers/admin/settings/: appearance.rs  backup_settings.rs  banners.rs  board.rs  maintenance.rs  site.rs  themes.rs
src/handlers/board/: access_preferences.rs  catalog.rs  create_thread.rs  media.rs  pages.rs  reports.rs  tests.rs
src/media/: convert.rs  exif.rs  ffmpeg.rs  mod.rs  prune.rs  thumbnail.rs
src/middleware/: backup_progress.rs  csrf.rs  ip.rs  mod.rs  normalize.rs  rate_limit.rs  state.rs
src/server/: cli.rs  console.rs  mod.rs  ngrok.rs  server.rs
src/server/console/: dashboard.rs  input.rs  mod.rs  wizard.rs
src/server/server/: assets.rs  headers.rs  lifecycle.rs  observability.rs  router.rs  routes.rs
src/templates/: admin.rs  board.rs  forms.rs  mod.rs  thread.rs
src/templates/admin/: appearance.rs  backups.rs  boards.rs  layout.rs  maintenance.rs  moderation.rs  site_health.rs
src/tls/: acme.rs  mod.rs  self_signed.rs
src/utils/: crypto.rs  files.rs  fs_security.rs  mod.rs  redirect.rs  sanitize.rs  tripcode.rs
src/utils/files/: disk_space.rs  jpeg.rs  mime.rs  storage.rs
src/utils/sanitize/: formatting.rs
src/workers/: mod.rs
static/: admin.css  admin.js  main.js  style.css  theme-init.js
