[package]
name = "rustchan"
version = "1.0.2"
edition = "2021"
# FIX[LOW-1]: Removed hardware-specific description. This binary is portable
# and targets any architecture/OS that Rust supports.
description = "Self-contained imageboard — single binary, zero runtime dependencies"

[profile.release]
opt-level      = 3
lto            = "thin"
codegen-units  = 1
strip          = true
panic          = "abort"

[[bin]]
name = "rustchan"
path = "src/main.rs"

[lib]
name  = "chan"
path  = "src/lib.rs"

[dependencies]
axum       = { version = "0.7",  features = ["multipart"] }
axum-extra = { version = "0.9",  features = ["cookie"] }
tower      = "0.4"
tower-http = { version = "0.5",  features = ["fs"] }
tokio      = { version = "1",    features = ["full"] }

rusqlite    = { version = "0.31", features = ["bundled"] }
r2d2        = "0.8"
r2d2_sqlite = "0.24"

serde = { version = "1", features = ["derive"] }
toml  = { version = "0.8", features = ["parse"] }

argon2 = "0.5"
sha2   = "0.10"
hex    = "0.4"
rand   = "0.8"

image = { version = "0.24", default-features = false, features = ["jpeg", "png", "gif", "webp"] }

clap = { version = "4", features = ["derive"] }

uuid      = { version = "1",   features = ["v4"] }
chrono    = { version = "0.4", features = ["serde"] }
dashmap   = "5"
anyhow    = "1"
once_cell = "1"
regex     = "1"

tracing            = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
