[package]
name = "rustchan"
version = "1.1.0"
edition = "2021"
# axum 0.8 requires Rust 1.75; that is the effective floor for this project.
rust-version = "1.88.0"
license = "MIT"
# FIX[LOW-1]: Removed hardware-specific description. This binary is portable
# and targets any architecture/OS that Rust supports.
description = "Self-contained imageboard — single binary, zero runtime dependencies"

# cargo-msrv <0.16 reads package.metadata.msrv instead of the Cargo-standard
# rust-version field; keep both so `cargo msrv verify` works regardless of
# which version of cargo-msrv is installed.
[package.metadata]
msrv = "1.75"

[profile.release]
opt-level      = 3
lto            = "thin"
codegen-units  = 1
strip          = true
panic          = "abort"

[[bin]]
name = "rustchan-cli"
path = "src/main.rs"

[lib]
name  = "chan"
path  = "src/lib.rs"

[dependencies]
axum       = { version = "0.8",  features = ["multipart"] }
axum-extra = { version = "0.12", features = ["cookie"] }
tower      = "0.5"
tower-http = { version = "0.6",  features = ["fs", "set-header", "compression-full"] }
tokio      = { version = "1",    features = ["full"] }
tokio-util = "0.7"

rusqlite    = { version = "0.38", features = ["bundled", "backup"] }
r2d2        = "0.8"
r2d2_sqlite = "0.32"
time        = "0.3"

serde      = { version = "1", features = ["derive"] }
serde_json = "1"
# toml 1.0: serde parsing is built-in, no feature flag needed.
toml  = "1.0"

argon2 = "0.5"
sha2   = "0.10"
hex    = "0.4"
# rand_core 0.6 replaces rand = "0.8" entirely.
# We only need OsRng + RngCore, both of which live in rand_core.
# rand_core 0.6 that argon2 0.5 / password-hash 0.5 depends on, causing
# OsRng type mismatches at compile time. Using rand_core 0.6 directly
# shares the exact same crate instance as argon2's transitive dep.
rand_core = { version = "0.6", features = ["getrandom"] }

image = { version = "0.25", default-features = false, features = ["jpeg", "png", "gif", "webp", "bmp", "tiff"] }

# EXIF orientation correction: read Orientation tag from JPEG uploads and
# apply the corresponding rotation before thumbnailing so that photos taken
# on phones display upright (4.1).
kamadak-exif = "0.5"

clap = { version = "4", features = ["derive"] }

uuid      = { version = "1",   features = ["v4"] }
chrono    = { version = "0.4", features = ["serde"] }
dashmap      = "6"
parking_lot  = "0.12"
anyhow       = "1"
once_cell    = "1"
regex     = "1"

# zip 8: SimpleFileOptions and core ZipWriter/ZipArchive API unchanged.
# by_index(), start_file(), add_directory(), finish() all stable.
# Use file_names() iterator for name-only pre-flight scans (cleaner than
# by_index_raw which is now by_index_without_decompression in zip 8).
zip = { version = "8", default-features = false, features = ["deflate"] }

tracing            = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

thiserror = "2"
tempfile  = "3"
libc      = "0.2"

[lints.clippy]
too_many_arguments             = "allow"
manual_pattern_char_comparison = "allow"
# Deny the most dangerous footguns
unwrap_used                    = "warn"   # force .expect("reason") or proper handling
expect_used                    = "allow"  # allow in tests; use with a message in production
indexing_slicing               = "warn"   # prefer .get() with bounds check
arithmetic_side_effects        = "allow"  # too noisy for general arithmetic
missing_errors_doc             = "allow"  # pedantic docs lint, too noisy for all Results
doc_markdown                   = "allow"  # allow non-backticked identifiers in docs
doc_lazy_continuation          = "allow"  # don't require strict indentation for doc lists
items_after_statements         = "allow"  # permit helper items inside functions
wildcard_imports               = "allow"  # crate-level style choice for imports
uninlined_format_args          = "allow"  # allow older-style format! calls
